[package]
name = "rabbitmq_http_client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
thiserror = "1"
serde = { version = "1.0", features = ["derive", "std"] }
serde-aux = "4.2"
serde_json = "1"
percent-encoding = "2"
rand = "0.8.5"
ring = "0.16.20"
rbase64 = "2"
